--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -106,14 +106,23 @@ We use the popular notation: We are going to have $k$ players. For $i \in [k], X
   Fix in advance a partition of $A$ into sets $B_1,\ldots,B_{\ell}$,
   where $|B_j| = m/2$ for each $j = 1,\ldots,\ell-1$,
   and the last set has size $m/2 \leq B_{\ell} \leq m - 1$.
-  Note that we have $\ell > |A_i|$:
-  each $B_j$ comprises $m/2$ elements,
+  Note that we have $\ell > |A_i|$: \newline
+  each $B_j$ comprises $m/2$ elements, therefore:
   \begin{equation*}
-    \ell \geq \frac{|A|}{m/2} - 1 > \frac{|A|}{m} \geq |A_i|.
+    \ell \geq \frac{|A|}{m/2} - 1
   \end{equation*}
+  
+  Simplifying the expression and using $A_i$'s size assumption:
+  \begin{equation*}
+    \frac{|A|}{m/2} - 1 =  2\frac{|A|}{m} - 1 > \frac{|A|}{m} \geq |A_i|.
+  \end{equation*}
+   
+  
   Therefore, there exists $j \in [\ell]$ such that $B_j \cap A_i = \emptyset$:
-  in order for $A_i$ to intersect all $\ell$ sets $B_1,\ldots,B_{\ell}$,
-  we would need to have $|A_i| \geq \ell$.
+  assume by contradiction that $A_i$ intersects all $\ell$ sets $B_1,\ldots,B_{\ell}$. 
+  \begin{equation*}
+  |A_i| = |\bigcup_{j=1}^{\ell}\left(B_j \cap A_i \right)| \geq \sum_{j=1}^{\ell} |B_j \cap A_i| \geq \sum_{j=1}^{\ell}1 = \ell
+  \end{equation*}
 
   The protocol is therefore to have player $i$ send the index $j \in [\ell]$ of a set $B_j$
   such that $A_i \cap B_j = \emptyset$.
