mu isn't updated. not updated

--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -264,7 +264,7 @@ Each iteration proceeds as follows:
       \item $U \leftarrow U \setminus B$,
       \item $n \leftarrow |U|$,
       \item $x_i \leftarrow x_i \cap U$,
-      \item $\mu \leftarrow \mu $ (isn't updated)
+      \item $\mu \leftarrow \mu $ (not updated)
     \end{itemize}
 \end{enumerate}
 
