--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -482,14 +482,14 @@ Therefore we are looking for the following probability:
     \Pr[\text{i is good in U}| X_i = x_i]
 \end{equation*}
 
-Since $DISJ_i(U) = DISJ \cap \{\text{i is good in U}\}$ (by definition), $\{\text{i is good in U}\} \subseteq DISJ_i$ which leads to 
+Since $D_i(U) = DISJ \cap \{\text{i is good in U}\}$ (by definition), $\{\text{i is good in U}\} \subseteq D_i(U)$ which leads to 
 \begin{equation*}
-    \Pr[\text{i is good in U}| X_i = x_i] \geq \Pr[DISJ_i(U) | X_i = x_i]
+    \Pr[\text{i is good in U}| X_i = x_i] \geq \Pr[D_i(U) | X_i = x_i]
 \end{equation*}
 
 By definition of $\gamma_i(x_i, U)$:
 \begin{equation*}
-    \Pr[\text{i is good in U}| X_i = x_i] \geq \Pr[DISJ_i(U) | X_i = x_i] = \gamma_i(x_i, U)
+    \Pr[\text{i is good in U}| X_i = x_i] \geq \Pr[D_i(U) | X_i = x_i] = \gamma_i(x_i, U)
 \end{equation*}
 
 Since i is significant
